kubernetes/vault/network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: vault-operator
spec:
  selector:
    istio: cluster-ingress
  servers:
  - port:
      number: 8200
      name: http
      protocol: HTTP
    hosts:
    - cluster.excellenceforge.com

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-virtualservice
  namespace: vault-operator
spec:
  hosts:
  - cluster.excellenceforge.com
  gateways:
  - cluster-gateway
  http:
  - route:
    - destination:
        host: vault-ui.vault-operator.svc.cluster.local
        port:
          number: 8200
